# OpenNautilus

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.c
config/: CMakeLists.txt  FreeRTOSConfig.h
